Atualização do portfolio

--- a/portifolio/styles/style.css
+++ b/portifolio/styles/style.css
@@ -118,3 +118,9 @@ body {
     font-size: 24px;
     font-weight: 400;
 }
+
+.apresentacao__imagem__about {
+    display: flex;
+    justify-content: space-around;
+    width: 400px;
+}
