--- a/portifolio/styles/style.css
+++ b/portifolio/styles/style.css
@@ -21,7 +21,7 @@
 
 .cabecalho__menu__link {
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -51,12 +51,12 @@ body {
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__texto {
-    font-size: 20px;
+    font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
 }
 
@@ -68,7 +68,7 @@ body {
 }
 
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -76,7 +76,7 @@ body {
 
 .apresentacao__links__subtitulos {
     font-family: var(--fonte-primaria);
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__links {
@@ -88,11 +88,11 @@ body {
     gap: 32px;
 }
 
-.apresentacao__links__link {
+.apresentacao__links__navegacao {
     display: flex;
     justify-content: center;
     gap: 16px;
-    width: 378px;
+    width: 50%;
     height: 25px;
     text-align: center;
     gap: 16px;
@@ -113,10 +113,7 @@ body {
 }
 
 .apresentacao__imagem {
-   width: 400px;
-   height: auto;
-   margin-right: 20px;
-   margin-top: -185px;
+   width: 50%;
 }
 
 .rodape {
@@ -125,7 +122,7 @@ body {
     background-color: var(--cor-terciaria);
     text-align: center;
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
