--- a/portifolio/styles/style.css
+++ b/portifolio/styles/style.css
@@ -65,6 +65,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 .apresentacao__conteudo {
@@ -131,3 +132,17 @@ body {
     justify-content: space-around;
     width: 400px;
 }
+
+@media (max-width: 1200px) {
+    .cabecalho {
+        padding: 10%;
+    }
+
+    .cabecalho__menu {
+        justify-content: center;
+    }
+
+    .apresentacao {
+        flex-direction: column-reverse;
+    }
+} 
